<resources>
    <string name="app_name">MyPersonalBudget</string>
    <string name="app_abbreviation">MPB</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_login">Login</string>
    <string name="action_cancel">Cancel</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_description">"My Personal Budget: the complete system for your finances"</string>
    <string name="error_signup_empty">"Please, enter all your information"</string>
    <string name="error_psw_length">"Password must be at least 6 characters"</string>
    <string name="error">"Error"</string>
    <string name="welcome">"Welcome"</string>
    <string name="welcome_description">"Hi and thanks for downloading our app! Here are some tips to get you started: use the navigation bar at the bottom of your screen to move around the main sections of our app, you can manage your profile with the menu on the Profile section."</string>
    <string name="profile">"Profile"</string>
    <string name="edit_profile">"Edit Profile"</string>
    <string name="logout">"Logout"</string>
    <string name="title_activity_profile">"Profile"</string>
    <string name="action_edit">Edit</string>
    <string name="title_activity_edit_profile">"Edit Profile"</string>
    <string name="update_profile">"Profile successfully updated!"</string>
    <string name="update_profile_error">"Please, enter the information you want to edit"</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="error_old_new_password">Please, enter the Old Password and the New Password</string>
    <string name="wrong_old_pass">Old Password is wrong</string>
    <string name="update_btn">Update</string>
    <string name="change_password">Change Password</string>
    <string name="update_password">"Password successfully updated!"</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="statistics">Statistics</string>
    <string name="financial_report">Financial Report</string>
    <string name="euro_symbol">€</string>
    <string name="confirm">Confirm</string>
    <string name="earnings">Earnings</string>
    <string name="outflows">Outflows</string>
    <string name="transaction_description">Choose a macro category, a category and enter the amount</string>
    <string name="salary">Salary</string>
    <string name="pension">Pension</string>
    <string name="gift">Gift</string>
    <string name="income">Income</string>
    <string name="earnings_other">+Other</string>
    <string name="health">Health</string>
    <string name="car">Car</string>
    <string name="shopping">Shopping</string>
    <string name="outflows_other">-Other</string>
    <string name="filter_description">Choose a category to filter and its macro category</string>
    <string name="date_description">Choose the date of interest for your financial report</string>
    <string name="inforequired">Please, enter all the required information.</string>
    <string name="wrong">Something went wrong</string>
    <string name="GraphicReport">Statistics</string>
    <string name="GraphDescription">Prova 1234567890 Ciao</string>
</resources>
