<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryFilterActivity">

    <TextView
        android:id="@+id/filter_category_description"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/filter_description"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup_filter_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_category_description">


        <RadioButton
            android:id="@+id/filter_earnings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:text="@string/earnings"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/filter_outflows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:text="@string/outflows"
            android:textSize="25sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup_filter_earnings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup_filter_outflows"
        app:layout_constraintTop_toTopOf="@+id/radioGroup_filter_outflows">

        <RadioButton
            android:id="@+id/filter_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/filter_pension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pension"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/filter_gift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gift"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/filter_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/other_earnings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earnings_other"
            android:textSize="25sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup_filter_outflows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="57dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_filter_type">

        <RadioButton
            android:id="@+id/filter_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/filter_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/filter_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/filter_shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/filter_other_outflows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outflows_other"
            android:textSize="25sp" />

    </RadioGroup>

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_filter_outflows" />

</androidx.constraintlayout.widget.ConstraintLayout>