<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.IntroActivity">

    <Button
        android:id="@+id/button_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="209dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/action_sign_up"
        android:textColor="@color/textColorPrimaryInverse"
        app:layout_constraintBottom_toBottomOf="@+id/button_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_log"
        app:layout_constraintTop_toTopOf="@+id/button_log"
        app:layout_constraintVertical_bias="0.24"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="144dp"
        android:layout_height="138dp"
        android:layout_marginTop="124dp"
        android:adjustViewBounds="false"
        android:background="#80FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:cropToPadding="true"
        android:foreground="@drawable/logo_app_arrotondato"
        android:radius="60px"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher_background"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView_first"
        android:layout_width="310dp"
        android:layout_height="98dp"
        android:layout_marginTop="50dp"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614" />

    <Button
        android:id="@+id/button_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="66dp"
        android:layout_marginBottom="209dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/action_login"
        android:textColor="@color/textColorPrimaryInverse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_first"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>